unpackaged/main/default/objects/Marketing_Project__c/Marketing_Project__c.object-meta.xml
<CustomObject>
    <description>Used to house the projects that may come from Marketing Requests</description>
    <label>Marketing Project</label>
    <nameField>
        <label>Marketing Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>