unpackaged/main/default/objects/Marketing_Project__c/fields/Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Cost__c</fullName>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>