unpackaged/main/default/objects/Marketing_Project__c/fields/Business_Approved__c.field-meta.xml
<CustomField>
    <fullName>Business_Approved__c</fullName>
    <inlineHelpText>Business owner will check this box when project is approved</inlineHelpText>
    <label>Business Approved</label>
    <type>Date</type>
</CustomField>