unpackaged/main/default/objects/Marketing_Project__c/fields/Business_Approver__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Approver</description>
    <inlineHelpText>Business Approver</inlineHelpText>
    <label>Business Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>