unpackaged/main/default/objects/Marketing_Project__c/fields/Core_Service__c.field-meta.xml
<CustomField>
    <fullName>Core_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Service</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Projects</relationshipLabel>
    <relationshipName>Marketing_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>