unpackaged/main/default/objects/Marketing_Project__c/fields/Department_Projected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Department_Projected_Revenue__c</fullName>
    <description>Enter Department Projected Revenue here.</description>
    <inlineHelpText>Enter Department Projected Revenue here.</inlineHelpText>
    <label>Department Projected Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>