unpackaged/main/default/objects/Marketing_Project__c/fields/Duration_Calc__c.field-meta.xml
<CustomField>
    <fullName>Duration_Calc__c</fullName>
    <description>Calculates number of workdays between today and requested launch date of campaign</description>
    <formula>( 

(5 * ( FLOOR( ( Scheduled_Tactic_Start__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Scheduled_Tactic_Start__c - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today() - DATE( 1900, 1, 8), 7 ) ) ) 

) 

-(Estimated_Project_Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days Before Latest Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>