unpackaged/main/default/objects/Marketing_Project__c/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <description>Field is populated by the Marketing Project Stage creation FLow</description>
    <inlineHelpText>Date based on standard duration for Project Type stages.</inlineHelpText>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>