unpackaged/main/default/objects/Marketing_Project__c/fields/Estimated_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Labor_Cost__c</fullName>
    <formula>Stage_LOE_Total__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>