unpackaged/main/default/objects/Marketing_Project__c/fields/Estimated_Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Duration__c</fullName>
    <description>Standard duration in days of selected marketing tactic</description>
    <formula>Marketing_Tactic__r.Estimated_Workday_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Standard duration in days of selected marketing tactic</inlineHelpText>
    <label>Estimated Project Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>