unpackaged/main/default/objects/Marketing_Project__c/fields/Estimated_Project_Launch__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Launch__c</fullName>
    <formula>CASE(
	MOD(Start_Date__c - DATE(1900, 1, 7), 7),
	0, (Start_Date__c) + Estimated_Project_Duration__c + FLOOR((Estimated_Project_Duration__c-1)/5)*2,
	1, (Start_Date__c) + Estimated_Project_Duration__c + FLOOR((Estimated_Project_Duration__c)/5)*2,
	2, (Start_Date__c) + Estimated_Project_Duration__c + FLOOR((Estimated_Project_Duration__c+1)/5)*2,
	3, (Start_Date__c) + Estimated_Project_Duration__c + FLOOR((Estimated_Project_Duration__c+2)/5)*2,
	4, (Start_Date__c) + Estimated_Project_Duration__c + FLOOR((Estimated_Project_Duration__c+3)/5)*2,
	5, (Start_Date__c) + Estimated_Project_Duration__c + CEILING((Estimated_Project_Duration__c)/5)*2,
	6, (Start_Date__c) - IF(Estimated_Project_Duration__c&gt;0,1,0) + Estimated_Project_Duration__c + CEILING((Estimated_Project_Duration__c)/5)*2,
	null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project End</label>
    <type>Date</type>
</CustomField>