unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Approved__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approved__c</fullName>
    <label>Marketing Approved</label>
    <type>Date</type>
</CustomField>