unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Approver__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>