unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget__c</fullName>
    <label>Marketing Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>