unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Budget_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget_Deprecated__c</fullName>
    <formula>Department_Projected_Revenue__c *  Percentage_of_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Budget (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>