unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Request__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Request__c</fullName>
    <label>Marketing Request</label>
    <referenceTo>Request_Forms__c</referenceTo>
    <relationshipLabel>Marketing Projects</relationshipLabel>
    <relationshipName>Marketing_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>