unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Request_Name__c</fullName>
    <formula>Marketing_Request__r.Request_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Request Name</label>
    <type>Text</type>
</CustomField>