unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Tactic</label>
    <referenceTo>Marketing_Tactic__c</referenceTo>
    <relationshipLabel>Marketing Projects</relationshipLabel>
    <relationshipName>Marketing_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>