unpackaged/main/default/objects/Marketing_Project__c/fields/Marketing_Year__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Year</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Name</field>
            <operation>startsWith</operation>
            <value>Marketing Year</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Projects (Marketing Year)</relationshipLabel>
    <relationshipName>Marketing_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>