unpackaged/main/default/objects/Marketing_Project__c/fields/MarketingProiectID_18__c.field-meta.xml
<CustomField>
    <fullName>MarketingProiectID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarketingProiectID (18)</label>
    <type>Text</type>
</CustomField>