unpackaged/main/default/objects/Marketing_Project__c/fields/Percentage_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Revenue__c</fullName>
    <description>Percentage of Revenue</description>
    <inlineHelpText>Percentage of Revenue expected for Marketing budget</inlineHelpText>
    <label>Percentage of Revenue</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>