unpackaged/main/default/objects/Marketing_Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <displayFormat>MP-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>