unpackaged/main/default/objects/Marketing_Project__c/fields/Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes__c</fullName>
    <label>Project Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>