unpackaged/main/default/objects/Marketing_Project__c/fields/Projected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Close_Date__c</fullName>
    <formula>if( ISBLANK( Scheduled_Tactic_Start__c ),Start_Date__c   +  Tactic_Run_Time_Days__c, Scheduled_Tactic_Start__c  +  Tactic_Run_Time_Days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Project End Date prior to tactic launch/completion</inlineHelpText>
    <label>Project Close</label>
    <type>Date</type>
</CustomField>