unpackaged/main/default/objects/Marketing_Project__c/fields/Remaining_Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Pipeline_Value__c</fullName>
    <description>Used by Rollup Helper</description>
    <inlineHelpText>Value of all open opportunities in this project</inlineHelpText>
    <label>Remaining Pipeline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>