unpackaged/main/default/objects/Marketing_Project__c/fields/Requested_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Launch_Date__c</fullName>
    <label>Requested Launch Date</label>
    <type>Date</type>
</CustomField>