unpackaged/main/default/objects/Marketing_Project__c/fields/Role_B__c.field-meta.xml
<CustomField>
    <fullName>Role_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role B</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Role_B</relationshipName>
    <type>Lookup</type>
</CustomField>