unpackaged/main/default/objects/Marketing_Project__c/fields/Role_D__c.field-meta.xml
<CustomField>
    <fullName>Role_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role D</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Role_D</relationshipName>
    <type>Lookup</type>
</CustomField>