unpackaged/main/default/objects/Marketing_Project__c/fields/Role_E__c.field-meta.xml
<CustomField>
    <fullName>Role_E__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role E</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Role_E</relationshipName>
    <type>Lookup</type>
</CustomField>