unpackaged/main/default/objects/Marketing_Project__c/fields/Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Date__c</fullName>
    <description>This is carried from the marketing request and used to measure against the projected end date</description>
    <label>Scheduled End Date</label>
    <type>Date</type>
</CustomField>