unpackaged/main/default/objects/Marketing_Project__c/fields/Scheduled_Tactic_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Tactic_Start__c</fullName>
    <description>Date the tactic actually is launched after the project is finished</description>
    <inlineHelpText>Date the tactic actually is launched after the project is finished - this is determined by Marketing</inlineHelpText>
    <label>Scheduled Tactic Start</label>
    <type>Date</type>
</CustomField>