unpackaged/main/default/objects/Marketing_Project__c/fields/Stage_Duration_Total__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration_Total__c</fullName>
    <description>Totals all stages associated by Duration</description>
    <label>Stage Duration Total</label>
    <summarizedField>Marketing_Project_Stage__c.Duration_Days__c</summarizedField>
    <summaryForeignKey>Marketing_Project_Stage__c.Marketing_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>