unpackaged/main/default/objects/Marketing_Project__c/fields/Stage_LOE_Total__c.field-meta.xml
<CustomField>
    <fullName>Stage_LOE_Total__c</fullName>
    <label>Stage LOE Total</label>
    <summarizedField>Marketing_Project_Stage__c.Stage_LOE__c</summarizedField>
    <summaryForeignKey>Marketing_Project_Stage__c.Marketing_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>