unpackaged/main/default/objects/Marketing_Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Project Start</label>
    <type>Date</type>
</CustomField>