unpackaged/main/default/objects/Marketing_Project__c/fields/Tactic_Run_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Run_Time_Days__c</fullName>
    <description>How long in days will the tactic run once launched</description>
    <inlineHelpText>How long in days will the tactic run once launched</inlineHelpText>
    <label>Tactic Run Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>