unpackaged/main/default/objects/Marketing_Project__c/fields/Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Created__c</fullName>
    <label>Tasks Created</label>
    <type>DateTime</type>
</CustomField>