unpackaged/main/default/objects/Marketing_Project__c/fields/Total_Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Won__c</fullName>
    <description>Used by Rollup Helper</description>
    <label>Total Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>