unpackaged/main/default/objects/Marketing_Project__c/fields/Total_Opportunities_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities_Generated__c</fullName>
    <description>Used by Rollup Helper</description>
    <label>Total Opportunities Generated</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>