unpackaged/main/default/objects/Marketing_Project__c/fields/Total_Spend_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend_Expenses__c</fullName>
    <description>Totals all Expense record $</description>
    <inlineHelpText>Totals all Expense record $</inlineHelpText>
    <label>Total Spend</label>
    <summarizedField>Marketing_Project_Expense__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Marketing_Project_Expense__c.Marketing_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>