unpackaged/main/default/objects/Marketing_Project__c/recordTypes/General_Advertising_Tactic.recordType-meta.xml
<RecordType>
    <fullName>General_Advertising_Tactic</fullName>
    <active>true</active>
    <label>General Advertising Tactic</label>
</RecordType>