unpackaged/main/default/objects/Marketing_Project__c/recordTypes/Marketing_General_Advertising.recordType-meta.xml
<RecordType>
    <fullName>Marketing_General_Advertising</fullName>
    <active>true</active>
    <description>Used for marking general advertising</description>
    <label>Marketing General Advertising</label>
</RecordType>