unpackaged/main/default/objects/Marketing_Project__c/recordTypes/Marketing_Project.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Project</fullName>
    <active>true</active>
    <description>Marketing Projects developed from Marketing Requests</description>
    <label>Marketing Project</label>
</RecordType>