unpackaged/main/default/objects/Marketing_Project__c/recordTypes/Marketing_Tradeshow.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Tradeshow</fullName>
    <active>true</active>
    <description>Record Type for Tradeshows</description>
    <label>Marketing Tradeshow</label>
</RecordType>