unpackaged/main/default/objects/Marketing_Project__c/recordTypes/Marketing_Year_Project.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Year_Project</fullName>
    <active>true</active>
    <description>Used to Identify Marketing Year Campaigns</description>
    <label>Marketing Year Project</label>
</RecordType>