unpackaged/main/default/objects/Marketing_Project__c/recordTypes/NCM_Business_Unit.recordType-meta.xml
<RecordType>
    <fullName>NCM_Business_Unit</fullName>
    <active>true</active>
    <description>Project layout for a core service (Business Unti)  record during Marketing Year creation</description>
    <label>NCM Business Unit</label>
</RecordType>