unpackaged/main/default/objects/Marketing_Project__c/recordTypes/Tradeshow_Tactic.recordType-meta.xml
<RecordType>
    <fullName>Tradeshow_Tactic</fullName>
    <active>true</active>
    <description>Specific to Tradeshow Sub Projects</description>
    <label>Tradeshow Tactic</label>
</RecordType>