unpackaged/main/default/objects/Marketing_Project__c/listViews/Completed_Projects.listView-meta.xml
<ListView>
    <fullName>Completed_Projects</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Request__c</columns>
    <columns>Marketing_Request_Name__c</columns>
    <columns>Core_Service__c</columns>
    <columns>Campaign_Tactic__c</columns>
    <columns>Business_Approved__c</columns>
    <columns>Business_Approver__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Scheduled_Tactic_Start__c</columns>
    <columns>Projected_Close_Date__c</columns>
    <columns>Stage_LOE_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Projects</label>
</ListView>