unpackaged/main/default/objects/Marketing_Project__c/listViews/Email_Projects.listView-meta.xml
<ListView>
    <fullName>Email_Projects</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Tactic_Start__c</columns>
    <columns>Projected_Close_Date__c</columns>
    <columns>Tactic_Run_Time_Days__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Core_Service__c</columns>
    <columns>Marketing_Request__c</columns>
    <columns>Marketing_Tactic__c</columns>
    <columns>NAME</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketing_Tactic__c</field>
        <operation>equals</operation>
        <value>Email,Newsletter</value>
    </filters>
    <label>Email Projects</label>
</ListView>