unpackaged/main/default/objects/Marketing_Project__c/listViews/Launched_Projects.listView-meta.xml
<ListView>
    <fullName>Launched_Projects</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Tactic__c</columns>
    <columns>Core_Service__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Scheduled_Tactic_Start__c</columns>
    <columns>Projected_Close_Date__c</columns>
    <columns>Stage_LOE_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Launched</value>
    </filters>
    <label>Launched Projects</label>
</ListView>